# pancluster

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: isr_reflection.md  mvp_description.md
src/: CMakeLists.txt
src/common/: discovery.cpp  discovery.h
src/follower_nodes/: CMakeLists.txt
src/follower_nodes/audio_node/: CMakeLists.txt  README.md  audio_main.cpp
src/master_node/: CMakeLists.txt  master_main.cpp
terraform/: github.tf  terraform.tfstate
